--- a/css.css
+++ b/css.css
@@ -3,6 +3,12 @@
     color: #000000;
     text-align: center;
 }
+.paragraph{
+    font-family: arial;
+    color: #000000;
+    text-align: center;
+    font-size: 20px;
+}
 .tabContainer{
     width: 100%;
     height: 350px;
